hphp/hack/test/typecheck/reified_generics/taccess_this.php.exp
File "taccess_this.php", line 9, characters 7-13:
Invalid reified hint (Typing[4305])
File "taccess_this.php", line 9, characters 7-10:
This is the late static bound this type, it cannot be used as a reified type argument
File "taccess_this.php", line 3, characters 15-15:
T is reified
File "taccess_this.php", line 10, characters 8-14:
Invalid reified hint (Typing[4305])
File "taccess_this.php", line 10, characters 8-11:
This is the late static bound this type, it cannot be used as a reified type argument
File "taccess_this.php", line 3, characters 15-15:
T is reified
